bug 54470 Deleting orphaned entries (no record associated with them) rather than holding them forever in memory on evict. r=neeti sr=rpotts (updating fix from branch 1.28.2.2 to tip)